# general_Inter_p_lib

./: CMakeLists.txt  README.md
src/: asynchronous.h  image.h  output  output.cpp  shared_memory.cpp  shared_memory.h
test/: image_test.cpp  shared_memory_test.cpp
